--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,10 @@
-/* Redimensionam logo-ul */
 header .logo {
     width: 150px;
     height: auto;
+}
+
+/* stilizam logoutul */
+header .logout:hover {
+    cursor: pointer;
+    text-decoration: underline;
 }
