--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,4 +1,13 @@
-footer svg {
-    width: 24px;
-    height: 24px;
+/* Adaugam stilizare pe mobile */
+/* MEDIA cu max-width => stilizarea din interior se aplică doar pentru ecrane cu dimensiuni
+de maxim 768px. */
+@media (max-width: 768px) {
+    /* aici selectam doar div-urile care sunt DIRECT copii pentru footer */
+    footer > div {
+        flex-direction: column;
+    }
+
+    footer .footer-group {
+        margin-bottom: 1.5rem;
+    }
 }
