--- a/src/utils/utility-classes.css
+++ b/src/utils/utility-classes.css
@@ -2,3 +2,12 @@
     min-width: 320px;
     max-width: 1200px;
 }
+
+.footer-icon {
+    width: 24px;
+    height: 24px;
+}
+
+.content-min-height {
+    min-height: 68vh;
+}
